--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -19,7 +19,7 @@
 	{{ end }}
 
 	<!-- CSS -->
-	<link rel="stylesheet" href="/website/css/main.min.css">
+	<link rel="stylesheet" href="/css/main.min.css">
 	{{ if hugo.IsServer }}
 	{{ $style := resources.Get "sass/main.scss"  | resources.ExecuteAsTemplate "scss/main.scss" . | toCSS (dict "targetPath" "css/main.css" "outputStyle" "compressed" "enableSourceMap" false) }}
 	<link rel="stylesheet" href="{{ ($style).RelPermalink }}">
