--- a/layouts/partials/scripts.html
+++ b/layouts/partials/scripts.html
@@ -11,5 +11,5 @@
 {{ $js := slice $jQuery $scrollex $scrolly $browser $breakpoints $util $main $demo | resources.Concat "js/bundle.js" | minify }}
 
 <!-- Scripts -->
-<script src='{{ $js.RelPermalink }}'></script>
+<script src='{{ $js.Permalink }}'></script>
 
