added dark mode for game

--- a/layouts/_default/tftdm.html
+++ b/layouts/_default/tftdm.html
@@ -3,5 +3,5 @@
 	{{ partial "banner" site.Data.tftdm_banner }}
 	{{ partial "banner" site.Data.tftdm_gameplay }}
 	{{ partial "gallery" site.Data.gallery }}
-	{{ partial "footer" . }}
+	{{ partial "footer_tftdm" . }}
 {{ end }}
