--- a/layouts/_default/tftdm_presskit.html
+++ b/layouts/_default/tftdm_presskit.html
@@ -3,5 +3,5 @@
 	{{ partial "columns" site.Data.tftdm_facts}}
 	{{ partial "gallery" site.Data.gallery }}
 	{{ partial "gallery" site.Data.logos }}
-	{{ partial "footer" . }}
+	{{ partial "footer_tftdm" . }}
 {{ end }}
