updated press kit

--- a/layouts/partials/factsheet.html
+++ b/layouts/partials/factsheet.html
@@ -7,7 +7,7 @@
 <p>Steam PC</p>
 <h3 id="website">Website:<a hidden="" class="anchor" aria-hidden="true" href="#website">#</a></h3>
 <p><a
-        href="https://djmonkeyuk.games/tales-from-the-dancing-moon">https://djmonkeyuk.games/tales-from-the-dancing-moon</a>
+        href="https://djmonkey.uk/tales-from-the-dancing-moon">https://djmonkey.uk/tales-from-the-dancing-moon</a>
 </p>
 <h3 id="regular-price">Regular Price:<a hidden="" class="anchor" aria-hidden="true" href="#regular-price">#</a></h3>
 <p>£14.99 / $17.99</p>
