--- a/layouts/shortcodes/steam.html
+++ b/layouts/shortcodes/steam.html
@@ -1,1 +1,1 @@
-<iframe src="https://store.steampowered.com/widget/1782420/" frameborder="0" width="100%" height="190"></iframe>
+<iframe src="https://store.steampowered.com/widget/1782420/" frameborder="0" width="100%" height="190" style="background-color: transparent;"></iframe>
