--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -122,7 +122,7 @@ iframe {
     display:block
 }
 
-.sidebar-bba{
+.sidebar{
     position:fixed;
 }
 
@@ -133,6 +133,15 @@ iframe {
 .sidebar-bba a:hover{
     color:#92ceff;
 }
+
+.sidebar-tftdm a{
+    color:orange;
+}
+
+.sidebar-tftdm a:hover{
+    color:rgb(255, 210, 128);
+}
+
 
 
 @media only screen and (max-width: 800px) {
