Some Blender guides.

--- a/layouts/partials/bba-sidebar.html
+++ b/layouts/partials/bba-sidebar.html
@@ -11,6 +11,6 @@
                 <li><a href="/no-mans-sky-base-builder-app/guides/prefabs/">📦 Prefabs</a></li>
                 <li><a href="/no-mans-sky-base-builder-app/guides/tools/">🧰 Tools</a></li>
                 <hr />
-                <li><a href="/no-mans-sky-base-builder-app/guides/videos/">📺 Videos</a></li>
+                <li><a href="/no-mans-sky-base-builder-app/guides/videos/">📺 Videos / Tutorials</a></li>
         </ul>
 </div>
