--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -1,5 +1,11 @@
 /* Custom styles added to demo */
 
+
+.post-content blockquote {
+  padding: 20px 20px 5px 20px;
+  background-color:rgba(255, 255, 255, 0.05);
+}
+
 .twitter-tweet {
     margin: auto;
 }
