--- a/layouts/partials/bba-sidebar.html
+++ b/layouts/partials/bba-sidebar.html
@@ -12,5 +12,18 @@
                 <li><a href="/no-mans-sky-base-builder-app/guides/tools/">🧰 Tools</a></li>
                 <hr />
                 <li><a href="/no-mans-sky-base-builder-app/guides/videos/">📺 Videos / Tutorials</a></li>
+                <hr />
+                <li>
+                        <a href="https://discord.gg/kpGVRKPn5W" target="_blank">
+                                <svg style="width:20px; height:20px; padding-top:6px; margin-left:2px; margin-right:2px;"
+                                        viewBox="0 0 127.14 96.36" fill="currentColor" stroke="none" stroke-width="2"
+                                        stroke-linecap="round" stroke-linejoin="round">
+                                        <path
+                                                d="M107.7 8.07A105.15 105.15.0 0081.47.0a72.06 72.06.0 00-3.36 6.83A97.68 97.68.0 0049 6.83 72.37 72.37.0 0045.64.0 105.89 105.89.0 0019.39 8.09C2.79 32.65-1.71 56.6.54 80.21h0A105.73 105.73.0 0032.71 96.36 77.7 77.7.0 0039.6 85.25a68.42 68.42.0 01-10.85-5.18c.91-.66 1.8-1.34 2.66-2a75.57 75.57.0 0064.32.0c.87.71 1.76 1.39 2.66 2a68.68 68.68.0 01-10.87 5.19 77 77 0 006.89 11.1A105.25 105.25.0 00126.6 80.22h0C129.24 52.84 122.09 29.11 107.7 8.07zM42.45 65.69C36.18 65.69 31 60 31 53s5-12.74 11.43-12.74S54 46 53.89 53 48.84 65.69 42.45 65.69zm42.24.0C78.41 65.69 73.25 60 73.25 53s5-12.74 11.44-12.74S96.23 46 96.12 53 91.08 65.69 84.69 65.69z">
+                                        </path>
+                                </svg>
+                                Join the Discord...
+                        </a>
+                </li>
         </ul>
 </div>
