--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -150,6 +150,115 @@ iframe {
 
 
 
+
+
+
+/* Epic Widget */
+
+.epic-widget {
+  background-color: #101014;
+}
+
+
+.EpicWidget {
+  display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    /* height: 100%; */
+    background-color:#101014;
+    padding: 16px;
+    border-radius: 12px;
+    gap: 24px;
+    margin-top:20px;
+}
+
+.EpicWidget button {
+  float:left;
+  background-color: #4bbcff ;
+  color:#111;
+  border-radius: 10px;
+  width:47%;
+  height:40px;
+  font-size:14px;
+  line-height: 14px;
+  padding-top:2px;
+  font-weight: bold;
+}
+
+.EpicWidget .button_placeholder {
+  float:left;
+  color:#111;
+  border-radius: 10px;
+  width:47%;
+  height:40px;
+  font-size:14px;
+  line-height: 14px;
+  padding-top:2px;
+  font-weight: bold;
+}
+
+.EpicWidget button:hover {
+  background-color:#81d4ff;
+}
+
+.EpicWidget p {
+  color:rgba(255, 255, 255, 0.65);
+  font-weight:400;
+  font-size:14px;
+  margin-bottom:10px;
+}
+
+.EpicWidget .button-left {
+  margin-right: 5px;
+}
+
+.EpicWidget .button-right {
+  margin-left: 5px;
+  color:#fff;
+  background-color:#101014;
+  border: 1px solid #bdbdbe;
+}
+
+.EpicWidget .button-right:hover {
+  background-color:#414145;
+}
+
+
+
+.EpicWidget .sep {
+  background-color: rgba(255, 255, 255, 0.1);
+  height:2px;
+  margin-bottom:15px;
+}
+
+.EpicWidget h3 {
+  font-size:20px;
+  margin-top:0px;
+  color:#FFF;
+}
+
+.EpicWidget .sub_heading {
+  font-size:14px;
+  font-weight:bold;
+  color: rgba(255, 255, 255, 0.7)
+}
+
+:root[data-theme="dark"] {
+    --theme: rgb(29, 30, 32);
+    --entry: rgb(46, 46, 51);
+    --primary: rgb(218, 218, 219);
+    --secondary: rgb(155, 156, 157);
+    --tertiary: rgb(65, 66, 68);
+    --content: rgb(196, 196, 197);
+    --code-block-bg: rgb(46, 46, 51);
+    --code-bg: rgb(55, 56, 62);
+    --border: rgb(51, 51, 51);
+    color-scheme: light;
+}
+
+
+
 @media only screen and (max-width: 800px) {
     .columns-row{
         display:block;
@@ -157,5 +266,22 @@ iframe {
     
     .sidebar{
         position:relative;
+    }
+    
+    .EpicWidget button {
+      float:left;
+      background-color: #4bbcff ;
+      color:#111;
+      border-radius: 10px;
+      width:100%;
+      height:40px;
+      font-size:14px;
+      line-height: 14px;
+      padding-top:2px;
+      font-weight: bold;
+    }
+
+    .EpicWidget .button_placeholder {
+      display:none;
     }
 }
