--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -258,6 +258,10 @@ iframe {
 }
 
 
+.buttons .button {
+  width:100%;
+  text-align: left;
+}
 
 @media only screen and (max-width: 800px) {
     .columns-row{
