--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -3,7 +3,8 @@
 
 .post-content blockquote {
   padding: 20px 20px 5px 20px;
-  background-color:rgba(255, 255, 255, 0.05);
+  background-color: rgba(81, 248, 48, 0.1);
+  border-left:4px solid #00ff22;
 }
 
 .twitter-tweet {
