updated epic games link

--- a/layouts/shortcodes/epic.html
+++ b/layouts/shortcodes/epic.html
@@ -6,14 +6,12 @@
     <div>
         <div><span class="sub_heading">Epic Games</span>
             <div><a href="https://store.epicgames.com/en-US/p/tales-from-the-dancing-moon-8ee7c4" target="_blank">
-                    <h3>Tales from The Dancing Moon Demo</h3>
+                    <h3>Tales from The Dancing Moon</h3>
                 </a></div>
         </div>
         <div>
             <div>
-                <p>Play the first Act of this mysterious character driven story inspired by
-                    UK culture and fantasy novels! Demo gameplay is a portion of the full game and is restricted
-                    to the season of Spring.</p>
+                <p>Tales from the Dancing Moon is a life-sim RPG set in a parallel universe inspired by UK culture and fantasy novels. After the events of a shadow-beast invasion on a seaside town, complete villager quests and collect hidden diaries to understand your role in this mysterious character-driven story.</p>
             </div>
         </div>
         <div role="separator" class="sep"></div>
@@ -23,7 +21,7 @@
                     <!-- <button type="button" class="button-left">Get</button> -->
                 </a></div>
             <a href="https://store.epicgames.com/en-US/p/tales-from-the-dancing-moon-8ee7c4" target="_blank"><button
-                    type="button" class="button-right">Go to Epic Game Store</button></a>
+                    type="button" class="button-right">Buy on Epic Game Store</button></a>
         </div>
     </div>
 </div>
